  * Update versioned Depends on MediaWiki
  * Move wikis to new (as of 2010-03-19, possibly by accident) data path
  * Check image upload is enabled before trying to do so (Closes: #679521)
  * Unbreak and silence the MediaWiki nightly dump cronjob (Closes: #680165)
  * Remove minified ECMAscript and binary *.jar from the source
  * SECURITY: Upon user deletion, remove their Unix account as well

 -- Thorsten Glaser <tg@mirbsd.de>  Mon, 03 Sep 2012 11:55:51 +0200

fusionforge (5.2~rc1-5) unstable; urgency=low

  * Updated Debconf translations for Portuguese (thanks to Américo
    Monteiro), German (thanks to Helge Kreutzmann), Russian (thanks to
    Yuri Kozlov), Galician (thanks to Jorge Barreiro), Czech (thanks to
    Miroslav Kure) (closes: #677737, #677653, #678424, #678629, #678685).

 -- Roland Mas <lolando@debian.org>  Thu, 28 Jun 2012 20:16:27 +0200

fusionforge (5.2~rc1-4) unstable; urgency=low

  * One more fix to Mediawiki upgrades (closes: #677599).

 -- Roland Mas <lolando@debian.org>  Fri, 15 Jun 2012 14:48:58 +0200

fusionforge (5.2~rc1-3) unstable; urgency=low

  * Updated Debconf translations for Swedish (thanks to Martin Bagge)
    (closes: #677411).
  * Fixes to Mediawiki plugin (including for interwiki).

 -- Roland Mas <lolando@debian.org>  Thu, 14 Jun 2012 16:48:38 +0200

fusionforge (5.2~rc1-2) unstable; urgency=low

  * Use more of the system-provided Jquery.
  * Reinstate code running the Mediawiki SQL initialisation code from the
    package's postinst (closes: #677373).

 -- Roland Mas <lolando@debian.org>  Wed, 13 Jun 2012 18:58:30 +0200

fusionforge (5.2~rc1-1) unstable; urgency=low

  * New upstream pre-release 5.2rc1.
  * Ripped out all but the most important Debconf questions in order to
    simplify installation and get rid of the legacy fusionforge.conf
    configuration file (which is no longer created on new installs).
  * Stop shipping fusionforge-config manpage.
